cut off fix

--- a/style.css
+++ b/style.css
@@ -33,8 +33,7 @@ html {
     flex-flow: column;
     background-size: cover;
     align-content: center;
-    height: 100vh;
-
+    
 }
 
 #bottom {
@@ -57,7 +56,7 @@ html {
 }
 
 #headerplaceholder {
-    height: 50vh;
+    height: 43vh;
     width: 25vw;
 }
 
@@ -121,7 +120,7 @@ html {
 }
 
 body {
-    background-color: #1a1a1d;
+    background-color: black;
     margin: 0px;
 }
 
